RESOLVED FIXED105001
Web Inspector: Native Memory Instrumentation: do not validate InlineFlowBox objects agains tcmalloc data
https://bugs.webkit.org/show_bug.cgi?id=105001
Summary Web Inspector: Native Memory Instrumentation: do not validate InlineFlowBox o...
Ilya Tikhonovsky
Reported 2012-12-14 01:19:28 PST
EOM
Attachments
Patch (2.40 KB, patch)
2012-12-14 01:24 PST, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2012-12-14 01:24:59 PST
Yury Semikhatsky
Comment 2 2012-12-14 02:02:13 PST
Comment on attachment 179445 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=179445&action=review > Source/WebCore/rendering/InlineFlowBox.h:302 > + virtual void reportMemoryUsage(MemoryObjectInfo*) const OVERRIDE; How does adding the method fixes the problem described in the bug? Does it mean that InlineBox::reportMemoryUsage is not detected on InlineFlowBox which is derived from InlineBox?
Ilya Tikhonovsky
Comment 3 2012-12-14 04:43:45 PST
(In reply to comment #2) > (From update of attachment 179445 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=179445&action=review > > > Source/WebCore/rendering/InlineFlowBox.h:302 > > + virtual void reportMemoryUsage(MemoryObjectInfo*) const OVERRIDE; > > How does adding the method fixes the problem described in the bug? Does it mean that InlineBox::reportMemoryUsage is not detected on InlineFlowBox which is derived from InlineBox? It happens because our template stuff doesn't detect instrumentation method in a base class.
Ilya Tikhonovsky
Comment 4 2012-12-14 05:55:32 PST
Note You need to log in before you can comment on or make changes to this bug.