Web Inspector: Native Memory Instrumentation: do not validate InlineFlowBox objects against tcmalloc data. https://bugs.webkit.org/show_bug.cgi?id=105001

Reviewed by Yury Semikhatsky.

This is a follow-up change for r137589.

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::reportMemoryUsage):
(WebCore):
* rendering/InlineFlowBox.h:
(InlineFlowBox):

Canonical link: https://commits.webkit.org/123262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137741 268f45cc-cd09-0410-ab3c-d52691b4dbfc