Source/WebCore/rendering/InlineFlowBox.cpp
@@ -39,6 +39,7 @@
 #include "RenderView.h"
 #include "RootInlineBox.h"
 #include "Text.h"
+#include "WebCoreMemoryInstrumentation.h"
 
 #include <math.h>
 
@@ -1634,5 +1635,16 @@ void InlineFlowBox::checkConsistency() const
 }
 
 #endif
+
+void InlineFlowBox::reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const
+{
+    MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::Rendering);
+    InlineBox::reportMemoryUsage(memoryObjectInfo);
+    info.addMember(m_overflow);
+    info.addMember(m_firstChild);
+    info.addMember(m_lastChild);
+    info.addMember(m_prevLineBox);
+    info.addMember(m_nextLineBox);
+}
 
 } // namespace WebCore
